--- a/templates/setup.html
+++ b/templates/setup.html
@@ -16,11 +16,11 @@ or implied.
 -->
 {% extends "base.html" %}
 
-{% block title %}Setup{% endblock %}
+{% block title %}Initial Setup{% endblock %}
 
-{% block pageTitle %}Setup{% endblock %}
+{% block pageTitle %}Initial Setup{% endblock %}
 
-{% block section1title %}<h2>Setup</h2>{% endblock %}
+{% block section1title %}<h2>Initial Setup</h2>{% endblock %}
 
 
 {% block section1content %}
