setting initial value of dropdown correctly

--- a/templates/pcountActivity.html
+++ b/templates/pcountActivity.html
@@ -34,7 +34,7 @@ or implied.
 
         <div class="form-group dropdown">
             <div class="form-group__text select">
-                <input id="select-state-default" value="--All--" name="dropdown_choice">
+                <input id="select-state-default" value="{{the_selection}}" name="dropdown_choice">
                 <label for="select-state-default">Device:</label>
             </div>
             <div class="dropdown__menu" id="dropdown_choice" >
