--- a/templates/setup.html
+++ b/templates/setup.html
@@ -28,7 +28,7 @@ or implied.
 <form class="form-signin" method="POST" action="{{ url_for('setup_post')}}">
 
       <div class="form-group">
-        <label for="inputDeviceIDFilter" class="sr-only"><b>DeviceID Filter: </b></label><br>
+        <label for="inputDeviceIDFilter" class="sr-only"><b>Device ID Filter (Regular Expression): </b></label><br>
         <input type="text" id="inputDeviceIDFilter" name="DeviceIDFilter" class="form-control" value="{{device_id_filter}}" autofocus>
       </div>
 
